--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -357,6 +357,59 @@
 
 
 \section{Komponente "'Durchmusterung"'}
+
+\subsection{posix Threads Definition}
+\begin{frame} {posix Threads}{Definition - Standard}
+	
+	Warum Posix Threads?
+	\skippingparagraph
+	
+	\begin{tabular}{l}
+		\pause - POSIX - Portable Operating System Interface\\ 
+		\pause - Abstraktion zwischen Hardware und Threading\\
+		\pause - erste Standardisierung 1988 (IEEE Std 1003.1-1988)\\
+     	\pause - aktuellste Version IEEE Std 1003.1,2016 Edition \\
+		\pause - nahezu  alle gängigen OS unterstützem p\_thread\\
+	\end{tabular} 
+
+
+	\note{
+		\begin{itemize}
+			\item 
+		\end{itemize}
+	}
+
+\end{frame}
+
+\subsection{posix Threads Umfang}
+
+\begin{frame} {posix Threads}{Standard- was gehört dazu}
+	
+	Was ist im Standard definiert?
+	\skippingparagraph
+	
+	\begin{tabular}{l}
+		\pause - ca. 100 pthread Funktionen (prefix pthread\_)\\ 
+		\pause - Thread Management\\
+		\pause - Mutexes\\
+		\pause - Condition Variables\\
+		\pause - Synchronistation\\
+	\end{tabular} 
+	\skippingparagraph
+	Was ist nicht enthalten?
+		\skippingparagraph
+	\begin{tabular}{l}
+		\pause - Semaphoren\\ 
+	\end{tabular} 
+	\skippingparagraph
+	
+	\note{
+		\begin{itemize}
+			\item 
+		\end{itemize}
+	}
+
+\end{frame}
 \subsection{Durchmusterung der Geotiff Daten und Auffinden der Landebahnen}
 
 \subsection{Interface der Library}
