--- a/planning/Vortrag/structure.tex
+++ b/planning/Vortrag/structure.tex
@@ -106,7 +106,10 @@ authoryear,
 \usepackage{bbding}
 \restoresymbol{BBDing}{Square}
 
-\usepackage{tikz} % https://tex.stackexchange.com/a/13095
+%\usepackage{tikz} % https://tex.stackexchange.com/a/13095
+
+\usepackage{tikz,pgfplots}
+%\usetikzlibrary{arrows,shapes,positioning}
 
 %%% listingsbackground from http://tex.stackexchange.com/a/85628/123262
 \makeatletter
