--- a/planning/Vortrag/structure.tex
+++ b/planning/Vortrag/structure.tex
@@ -101,6 +101,7 @@ authoryear,
 \definecolor{DarkGreen}{rgb}{0.0,0.4,0.0} % Comment color
 \definecolor{highlight}{RGB}{255,251,204} % Code highlight color
 
+\usepackage{gensymb}	%for the \degree command
 \usepackage{savesym}	%see http://www.tex.ac.uk/FAQ-alreadydef.html why we need this stunt here
 \savesymbol{Square}
 \usepackage{bbding}
