--- a/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
+++ b/planning/Vortrag/LandingPlanes_1597_SS2017_Vortrag.tex
@@ -1211,8 +1211,11 @@ N$\rightarrow$S (0$^\circ$) & 734 & \cellcolor{red!25} 16 & 8 & \cellcolor{red!2
 
   \end{tikzpicture}
 \end{frame}
-\subsection{Analyse mittels Profiler}
 
+\subsection{Analyse mittels Profiler}
+\begin{frame}
+
+\end{frame}
 \subsection{Einfluss von Compiler Direktiven (speziell Optimizer)}
 
 \section{Komponente "`databaseManager"'}
